<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Amigo-19</string>
    <string name="menu_home">Beranda</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_statistic">Statistik</string>
    <string name="menu_education">Edukasi</string>
    <string name="loading">Memuat…</string>
    <string name="loading_number">0</string>
    <string name="unit_countdown_home">hari lagi</string>
    <string name="desc_countdown_home">jangan lupa membeli kebutuhan pokok</string>
    <string name="subtitle_home">Kondisi saat ini di daerah Anda</string>
    <string name="stats_infected">terinfeksi &lt;b>%1$s&lt;/b></string>
    <string name="stats_patient">dirawat &lt;b>%1$s&lt;/b></string>
    <string name="stats_recovered">sembuh &lt;b>%1$s&lt;/b></string>
    <string name="stats_death">meninggal &lt;b>%1$s&lt;/b></string>
    <string name="title_statistic">Statistik</string>
    <string name="title_education">Pusat Edukasi</string>
    <string name="title_personal">Data Akun Anda</string>
    <string name="global_statistic">Global</string>
    <string name="indonesia_statistic">Indonesia</string>
    <string name="last_update_statistic">Diperbarui hari ini pukul %1$s</string>
    <string name="title_statistic_detail">Statistik %1$s</string>
    <string name="next_intro">Lanjut</string>
    <string name="skip_intro">Lewati</string>
    <string name="title_about">Tentang aplikasi</string>
    <string name="app_developer">oleh ariefzuhri</string>
    <string name="app_version">versi %1$s</string>
    <string name="title_login">Tautkan Akun</string>
    <string name="google_login">Lanjutkan dengan Google</string>
    <string name="intro_title_1">Ayo #dirumahaja</string>
    <string name="intro_desc_1">Amigo-19 akan menjadi temanmu dan siap membantu agar keluargamu gak sering keluar rumah buat beli kebutuhan pokok. Ada juga fitur ekstra, daftar belanja, agar kamu gak kelupaan apa yang mau dibeli.</string>
    <string name="intro_title_2">Saran Personalisasi</string>
    <string name="intro_desc_2">Saran dan tips terbaik dari kami buat kamu terkait belanja kebutuhan pokok keluarga sesuai dengan hasil asesmen yang nanti akan kamu isi.</string>
    <string name="intro_title_3">Statistik Terbaru</string>
    <string name="intro_desc_3">Angka penyebaran Covid-19 terbaru dan kamu bisa dengan mudah melihat statistik daerahmu. Dari statistik itu, kita semua pasti berharap keadaan bisa lebih baik.</string>
    <string name="intro_title_4">Pusat Edukasi</string>
    <string name="intro_desc_4">Mengenal korona virus, termasuk upaya pencegahannya, bahkan kamu bakal kenal dari sisi positifnya. Kamu juga bisa melihat daftar rumah sakit rujukan Covid-19.</string>
    <string name="end_intro">Mulai</string>
    <string name="infected">Terinfeksi</string>
    <string name="recovered">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="patient">Dirawat</string>
    <string name="menu_about">Tentang</string>
    <string name="menu_feedback">Kirim saran</string>
    <string name="title_sla">Setelan Lokasi</string>
    <string name="subtitle_sla">Lokasi Anda saat ini</string>
    <string name="loading_nothing">-</string>
    <string name="title_cla">Pilih %1$s</string>
    <string name="title_assessment_personal">Hasil asesmen</string>
    <string name="desc_next_overview_home">belanja berikutnya</string>
    <string name="desc_last_overview_home">terakhir kali belanja</string>
    <string name="note_pre_assessment">Catatan:</string>
    <string name="note_1_pre_assessment">Hasil asesmen akan digunakan agar kami dapat tau bagaimana kondisi Anda saat ini</string>
    <string name="note_2_pre_assessment">Maksud kebutuhan pokok adalah kebutuhan yang harus ada, seperti bahan makanan/makanan jadi, termasuk minuman, bahan perawatan tubuh (vitamin, obat-obatan, sabun, pasta gigi), dan juga kebutuhan hewan timangan Anda</string>
    <string name="note_4_pre_assessment">Kata \'Anda\' akan mewakili orang-orang yang tinggal serumah dengan Anda</string>
    <string name="note_3_pre_assessment">Mohon dijawab sesuai dengan kondisi Anda dalam 7 hari terakhir</string>
    <string name="start_assessment_pre_assessment">Mulai asesmen</string>
    <string name="title_pre_assessment">Halo, %1$s…</string>
    <string name="end_assessment">Selesai</string>
    <string name="day_full_date">%1$s, %2$s</string>
    <string name="result_1_assessment">Anda bisa belanja kembali kebutuhan pokok Anda setiap %1$d hari setelah terakhir kali belanja</string>
    <string name="result_2_assessment">Harap perhitungkan bahwa belanja Anda dapat mencukupi hingga %1$d hari ke depan</string>
    <string name="result_3_assessment">Anda %1$s kesulitan untuk memenuhi kebutuhan pokok. Kami memiliki saran terbaik untuk Anda.</string>
    <string name="rationale_location">Untuk mendeteksi lokasi Anda, kami membutuhkan izin penggunaan lokasi.</string>
    <string name="subtitle_education">Pilih topik edukasi</string>
    <string name="dialog_done_assessment">Asesmen telah selesai. Anda dapat menyimpannya dan hasil dapat dilihat pada tampilan personal.</string>
    <string name="dialog_ok">Oke</string>
    <string name="dialog_yes">Ya</string>
    <string name="dialog_cancel">Batal</string>
    <string name="dialog_sign_out_personal">Apakah Anda yakin ingin keluar dan mengganti akun?</string>
    <string name="dialog_reassessment_personal">Apakah Anda yakin ingin menghapus hasil asesmen Anda (termasuk riwayat tanggal belanja)?</string>
    <string name="dialog_save_assessment">Simpan dan Mulai</string>
    <string name="dialog_province_statistic">%1$s\n\nTerinfeksi: %2$s jiwa\nDirawat: %3$s jiwa\nSembuh: %4$s jiwa\nMeninggal: %5$s jiwa</string>
    <string name="dialog_info_statistic">Ketuk kotak statistik untuk lihat rinciannya</string>
    <string name="meet_home">Daftar belanja %1$s</string>
    <string name="title_mau">Tambah daftar</string>
    <string name="dialog_next_meet">Apakah Anda sudah belanja hari ini?</string>
    <string name="dialog_last_meet">Anda terakhir belanja pada %1$s atau %2$d hari yang lalu</string>
    <string name="dialog_undone">Belum</string>
    <string name="dialog_done">Sudah</string>
    <string name="dialog_delay">Tunda besok</string>
    <string name="dialog_no">Tidak</string>
    <string name="box_name_mau">Nama belanjaan</string>
    <string name="box_quantity_mau">Banyaknya</string>
    <string name="edt_hint_quantity_mau">100</string>
    <string name="edt_hint_name_mau">Wortel</string>
    <string name="box_helper_name_mau">Ketik nama belanjaan dengan singkat</string>
    <string name="box_helper_quantity_mau">Ketik angka saja, tanpa satuan</string>
    <string name="checkbox_meet_home">Beri tanda ceklis</string>
    <string name="credit_about">Desain vektor oleh freepik\nAPI Kawalcorona.com oleh Teguh Aprianto\nMateri edukasi oleh Kemenkominfo x GNFI\n\nSaran dan rekomendasi belanja oleh pakar dari Centers for Disease Control Atlanta, North Carolina State University, dan IPB University</string>
    <string name="cd_logo_about">Ini adalah logo Amigo-19</string>
    <string name="title_assessment">Mengisi asesmen kebutuhan pokok</string>
    <string name="abroad_cla">Saya berada di luar negeri</string>
    <string name="add">Tambah</string>
    <string name="delete">Hapus</string>
    <string name="desc_pre_assessment">Untuk lebih memahami Anda, ayo ikuti asesmennya.</string>
    <string name="save">Simpan</string>
    <string name="cd_menu_home">Menu beranda</string>
    <string name="cd_location_personal">Setelan lokasi</string>
    <string name="subtitle_suggestion_personal">Saran untuk Anda</string>
    <string name="sign_out_personal">Ganti akun</string>
    <string name="reassessment_personal">Ulangi asesmen</string>
    <string name="cd_info_statistic">Tutorial statistik</string>
    <string name="cd_background_education_detail">Ilustrasi edukasi</string>
    <string name="cd_add_meet_home">Tambah daftar belanja</string>
    <string name="subtitle_setting_sla">Akses lokasi pengguna</string>
    <string name="desc_setting_sla">Gunakan GPS/jaringan untuk deteksi lokasi saya</string>
    <string name="dialog_no_data">Belum ada data.</string>
    <string name="info_overview_home">Tutorial pengelola waktu belanja</string>
    <string name="title_update_mau">Perbarui daftar</string>
    <string name="title_add_mau">Tambah daftar</string>
    <string name="dialog_delete_mau">Apakah Anda yakin ingin menghapus belanjaan ini?</string>
    <string name="dialog_cancel_update_mau">Anda belum menyimpan perubahan info belanjaan. Apakah Anda yakin ingin membatalkannya?</string>
    <string name="dialog_cancel_add_mau">Anda belum menyimpan penambahan daftar belanja. Apakah Anda yaking ingin membatalkannya?</string>
    <string name="snackbar_not_null">Semua isian tidak boleh kosong</string>
    <string name="snackbar_not_max">Semua isian tidak boleh melebihi batas karakter</string>
    <string name="snackbar_fail_location">Gagal mendapatkan lokasi</string>
    <string name="snackbar_add_meet">Daftar belanja berhasil ditambah</string>
    <string name="snackbar_update_meet">Daftar belanja berhasil diperbarui</string>
    <string name="snackbar_delete_meet">Daftar belanja berhasil dihapus</string>
    <string name="snackbar_fail_login">Gagal menautkan akun</string>
    <string name="snackbar_fail_auth_login">Gagal mengautentikasi akun</string>
    <string name="info_shopping_mode_home">Apa itu mode pergi belanja?</string>
    <string name="dialog_understand">Saya paham</string>
    <string name="dialog_info_overview_home">Pada tampilan ini, Anda bisa lihat kapan terakhir kali dan jadwal berikutnya Anda belanja.\n\nJangan lupa konfirmasi bahwa Anda sudah belanja pada hari ini agar data pengguna tetap terbaru.\n\nCaranya, ketuk kotak tanggal berwarna biru dan pilih opsi yang tepat.</string>
    <string name="dialog_info_shopping_mode_home">Mode pergi belanja akan memandu Anda ketika sebelum berangkat, saat belanja, dan setelah kembali.\n\nDengan menghidupkan mode ini, kami berusaha memastikan bahwa Anda akan aman selama di luar rumah untuk pergi belanja kebutuhan.\n\nKetika Anda menghidupkan mode ini, aplikasi akan langsung mengalihkan Anda ke sebuah tampilan khusus yang siap memandu.</string>
    <string name="title_shopping_mode">Mode Pergi Belanja</string>
    <string-array name="status_shopping_mode">
        <item>Bersiap untuk berangkat</item>
        <item>Sedang belanja kebutuhan</item>
        <item>Selesai belanja, sedang bersih-bersih</item>
    </string-array>
    <string name="meet_shopping_mode">Daftar belanja Anda</string>
    <string name="checklist_shopping_mode">Pastikan Anda sudah siap:</string>
    <string name="title_feedback">Kirim saran</string>
    <string name="menu_update">Cek pembaruan</string>
    <string name="yeay">Yeay!!</string>
    <string name="dialog_finish_shopping_mode">Anda sudah kembali bersih dan kebutuhan Anda sudah terpenuhi.\n\nJangan lupa konfirmasi bahwa Anda sudah belanja pada hari ini dengan cara mengetuk kotak tanggal berwarna biru di tab beranda.</string>
    <string name="close">Tutup</string>
    <string name="title_whats_new">Apa yang baru</string>
    <string name="title_tips_personal">Tips Belanja</string>
    <string name="title_tips_1_personal">Jadilah pembeli yang bijak</string>
    <string name="desc_tips_1_personal">Belilah kebutuhan pokok seperlunya agar masyarakat lain juga bisa memenuhi kebutuhannya. Perhitungkan juga dengan teliti bahwa kebutuhan Anda dapat terpenuhi sampai pada belanja berikutnya.</string>
    <string name="title_tips_2_personal">Perhatikan himbauan berikut</string>
    <string name="desc_tips_2_personal">Gunakan masker kain dan #jagajarak 2 meter. Pastikan Anda sehat dan jangan membawa anggota keluarga lain untuk pergi berbelanja. Selain itu, sebaiknya belanjalah pada jam-jam sepi.</string>
</resources>