<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/shape_main"
    android:id="@+id/activity_login">

    <ImageView
        android:id="@+id/img_logo_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/logo_reverse"
        android:layout_centerInParent="true"
        android:layout_above="@id/tv_title_login"
        android:contentDescription="@string/cd_logo_about"/>

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/TextView.SemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_login"
        android:textSize="@dimen/font_lg"
        android:layout_centerInParent="true"/>

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btn_google_login"
        style="@style/NoboButton.White"
        android:layout_marginTop="4dp"
        app:nb_text="@string/google_login"
        android:layout_centerInParent="true"
        android:layout_below="@id/tv_title_login"/>
</RelativeLayout>