<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
    android:background="@drawable/shape_main">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back_about"
        style="@style/FloatingActionButton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_chevron_left_cyan_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_about"
        style="@style/TextView.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_about"
        android:textSize="@dimen/font_lg"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_about"
        app:layout_constraintStart_toEndOf="@+id/btn_back_about"
        app:layout_constraintTop_toTopOf="@+id/btn_back_about" />

    <androidx.core.widget.NestedScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_about">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo_about"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/cd_logo_about"
                android:src="@mipmap/logo_no_title" />

            <TextView
                android:id="@+id/tv_name_about"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/font_lg" />

            <TextView
                android:id="@+id/tv_developer_about"
                style="@style/TextView.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_developer"
                android:textSize="@dimen/font_nm" />

            <TextView
                android:id="@+id/tv_version_about"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="@dimen/font_nm" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_credit_about"
            style="@style/TextView.SemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credit_about"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>