<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title_whats_new"
        style="@style/TextView.SemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_whats_new"
        android:textColor="@color/black"
        android:textSize="@dimen/font_nm"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_version_whats_new"
        style="@style/TextView.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="@dimen/font_sm"
        android:textAlignment="center"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/tv_log_whats_new"
        style="@style/TextView.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="@dimen/font_nm"/>

    <com.ornach.nobobutton.NoboButton
        android:id="@+id/btn_close_whats_new"
        style="@style/NoboButton.Primary"
        android:layout_width="match_parent"
        app:nb_text="@string/close"
        android:layout_marginTop="16dp"/>
</LinearLayout>